--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
     margin: 0;
 }
 
+* {
+    scrollbar-width: thin;
+}
+
+
 .container-box {
     background-color: var(--bgDark);
     border-radius: 20px;
@@ -43,42 +48,32 @@ body {
     overflow: hidden;
 }
 
+img {
+    width: 200px;
+    height: 200px;
+}
+
+/*CONVERSATION USER-IA*/
+
 .container-chat_conversation {
     width: 100%;
     height: 90%;
     padding: 20px;
+    padding-right: 40px;
+    padding-left: 40px;
     box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    overflow-y: auto;
-    overflow-x: hidden;
-    align-items: flex-start;
-}
-.conversation-ia{
-    width: 50%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.conversation-user{
-    width: 50%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
-    align-items: flex-end;
+    align-items: flex-start;
+    scrollbar-color: var(--bgDark);
 }
 
 .conatiner-userMessage{
     display: flex;
     align-items: flex-start;
-    justify-content: flex-end;
+    justify-content: flex-end;  
     width: 100%;
     padding: 6px;
     border-radius: 5px;
@@ -86,7 +81,7 @@ body {
 
 .userMessage {
     display: inline-block;     
-    max-width: 85%;             
+    max-width: 50%;             
     padding: 10px;
     background-color: #75A0C9;   
     color: rgb(20, 20, 20);                
@@ -95,7 +90,35 @@ body {
     word-wrap: break-word;      
     text-align: left;           
     font-size: 14px;
+    font-size:large;
 }
+
+.conatiner-iaMessage{
+    width: 50%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 6px;
+    border-radius: 5px;
+}
+
+.iaMessage {
+    display: inline-block;     
+    max-width: 50%;             
+    padding: 10px;
+    background-color: #75A0C9;   
+    color: rgb(20, 20, 20);                
+    border-radius: 10px;         
+    border-top-left-radius: 0;  
+    word-wrap: break-word;      
+    text-align: right;           
+    font-size: 14px;
+    font-size:medium;
+}
+
+
+/*USER MESSAGE*/
 .container-chat_message {
     background-color: var(--inputBg);
     border-radius: 8px;
@@ -140,6 +163,7 @@ button {
     padding: 0 10px;
 }
 
+/*RESPONSIVE*/
 
 @media (max-width: 768px) {
     .container-box {
