Co-authored-by: Juan Felipe Rubio Sanabria <RubioJuan@users.noreply.github.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ img {
     border-radius: 10px;         
     border-top-left-radius: 0;  
     word-wrap: break-word;      
-    text-align: right;           
+    text-align: left;           
     font-size: 14px;
     font-size:medium;
 }
