--- a/View/chat.html
+++ b/View/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <script type="module" src="/app.js" defer></script>
+    <script type="module" src="../app.js" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <title>Campi</title>
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
